[package]
name = "downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-sdk-s3 = "1.7.0"
tokio = { version = "1.35.0", features = ["full"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
aws-config = { version = "1.1.1", features = ["behavior-version-latest"] }
clap = { version = "4.4.11", features = ["derive"] }
anyhow = "1.0.75"
